# glCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: default.frag  default.vert  glCraftAsset.txt
assets/shaders/: chromatic_aberration_effect.frag  chromatic_aberration_effect.vert  colored_cube_opaque.frag  crosshair.frag  crosshair.vert  default.frag  default.vert  gamma_correction.frag  gaussian_blur.frag  gaussian_blur.vert  identity.frag  invert_effect.frag  outline.frag  outline.vert  skybox.frag  skybox.vert  vignette_effect.frag  vignette_effect.vert  world_blend.frag  world_blend.vert  world_opaque.frag  world_transparent.frag
src/: Application.cpp  Application.h  glCraft.cpp  glCraft.h  main.cpp
src/Application/: Application.cpp  Application.h  Gui.cpp  Gui.h  Window.cpp  Window.h
src/AssetManager/: AssetManager.cpp  AssetManager.h  AssetRegistry.h  CubeMapRegistry.h  ImageRegistry.h  ShaderProgramRegistry.h  ShaderRegistry.h  TextRegistry.h  TextureArrayRegistry.h  TextureRegistry.h
src/Assets/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/Assets/AssetManager/: AssetManager.h  AssetRegistry.h
src/Math/: AABB.h  AxisPlane.cpp  AxisPlane.h  Ray.cpp  Ray.h  WorldRayCast.cpp  WorldRayCast.h
src/Performance/: Trace.cpp  Trace.h
src/Persistence/: Persistence.cpp  Persistence.h
src/Physics/: MovementSimulation.cpp  MovementSimulation.h
src/Rendering/: BlockMesh.cpp  BlockMesh.h  BlockVertex.cpp  BlockVertex.h  Buffer.h  ColorRenderPass.cpp  ColorRenderPass.h  FrameBuffer.h  Framebuffer.cpp  FramebufferStack.cpp  FramebufferStack.h  FullscreenQuad.cpp  FullscreenQuad.h  GlCraftVertex.h  Image.cpp  Image.h  ParticleSystem.cpp  ParticleSystem.h  ProceduralShader.cpp  ProceduralShader.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Scene/: BlockData.cpp  BlockData.h  BlockOutline.cpp  BlockOutline.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Crosshair.cpp  Crosshair.h  CubeMesh.cpp  CubeMesh.h  Entity.cpp  Entity.h  Player.cpp  Player.h  PostProcessEffect.cpp  PostProcessEffect.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
src/Scene/Behaviors/: BlockBreakParticleBehavior.cpp  BlockBreakParticleBehavior.h  LavaParticleBehavior.cpp  LavaParticleBehavior.h  WorldBehavior.h
src/Scene/Effects/: ChromaticAberrationEffect.h  CrosshairEffect.h  GammaCorrectionEffect.h  GaussianBlurEffect.h  InvertEffect.h  PostProcessEffect.cpp  PostProcessEffect.h  VignetteEffect.h
src/Util/: AABB.cpp  AABB.h  Math.cpp  Math.h  MovementSimulation.cpp  MovementSimulation.h  Random.cpp  Random.h  Util.cpp  Util.h
src/World/: BlockData.h  BlockName.cpp  BlockName.h  Chunk.cpp  Chunk.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
src/World/RayCasting/: AxisPlane.cpp  AxisPlane.h  Ray.cpp  Ray.h
